# reflet

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml.example  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
crates/reflet/: Cargo.toml
crates/reflet-api/: Cargo.toml
crates/reflet-api/src/: app.rs  error.rs  lib.rs  state.rs
crates/reflet-api/src/rfc8522/: handlers.rs
crates/reflet-api/src/routes/: asns.rs  communities.rs  events.rs  lookup.rs  metrics.rs  mod.rs  peers.rs  routes.rs  snapshots.rs  summary.rs  whoami.rs
crates/reflet-api/tests/: api_integration.rs
crates/reflet-bgp/: Cargo.toml
crates/reflet-bgp/src/: codec.rs  error.rs  graceful_restart.rs  lib.rs  refresh.rs  session.rs  speaker.rs  update.rs
crates/reflet-core/: Cargo.toml
crates/reflet-core/src/: asn.rs  community.rs  config.rs  event_log.rs  lib.rs  peer.rs  prefix.rs  rib.rs  rib_persistence.rs  rib_snapshots.rs  route.rs  rpki.rs
crates/reflet/src/: main.rs  rpki.rs  snapshots.rs
docs/: DEPLOYMENT.md  configuration.md  deployment.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AsPath.tsx  AsPathGraph.tsx  ClearButton.tsx  CommunityBadge.tsx  CommunityList.tsx  Layout.tsx  Pagination.tsx  PeerCard.tsx  PrefixSearch.tsx  RouteTable.tsx  RpkiBadge.tsx  ToggleGroup.tsx  Tooltip.tsx
frontend/src/hooks/: useApi.ts  useEventStream.ts  useTheme.ts
frontend/src/pages/: Dashboard.tsx  Lookup.tsx  PeerList.tsx  PeerRoutes.tsx
frontend/src/utils/: asPathDag.test.ts  asPathDag.ts  communityAnnotation.test.ts  communityAnnotation.ts  format.ts  hiddenAddress.ts  stateColors.ts
