[workspace]
members = [
    "crates/reflet-core",
    "crates/reflet-bgp",
    "crates/reflet-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
reflet-core = { path = "crates/reflet-core" }
reflet-bgp = { path = "crates/reflet-bgp" }
reflet-api = { path = "crates/reflet-api" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Async streaming
async-stream = "0.3"
futures-core = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# BGP
zettabgp = "0.3"

# Networking / IP types
ipnet = { version = "2", features = ["serde"] }
prefix-trie = "0.8"

# Concurrency
dashmap = "6"
rayon = "1.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# CSV / compression (for ASN database)
csv = "1.3"
flate2 = "1"

# Regex (for AS path filtering)
regex = "1"

# HTTP client (for RPKI validator)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
