[package]
name = "reflet-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reflet-core = { workspace = true }
reflet-bgp = { path = "../reflet-bgp" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
ipnet = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
regex = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
