[package]
name = "reflet-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ipnet = { workspace = true }
prefix-trie = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
csv = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
